jwt-demo/resources/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-auth"
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  selector:
    matchLabels:
      app: demo-app
  jwtRules:
    - issuer: "zgrinber@redhat.com"
      jwksUri: "https://raw.githubusercontent.com/zvigrinberg/Cloud-native-patterns/main/isolated-secrets-store-k8s/jwt/jkws-demo.json"
