jwt-demo/resources/authorization-policy-allow-get-when-not-cloud-native.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    demoMeshResource: "true"
    policyResource: "true"
  name: require-jwt-negation-raw-cloud-native-claim
  namespace: demo
spec:
  selector:
    matchLabels:
      app: demo-app
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["zgrinber@redhat.com/zgrinber@redhat.com"]
      to:
      - operation:
          methods: ["GET"]
      when:
      - key: request.auth.claims[cloud-native]
        notValues: ["true"]
