jwt-demo/resources/authorization-policy-allow-principal.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  selector:
    matchLabels:
      app: demo-app
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["zgrinber@redhat.com/zgrinber@redhat.com"]
